fix dark mode

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: Inter;
+  background-color: var(--color-background);
+  color: var(--color-text-primary);
 }
 
 * {
